# pkna-uno

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  adventure_rpg.py  backup.sh  build-character-profile.py  build_agentic_character_profile.py  build_aieos_profile.py  build_aieos_profile_rlm.py  build_character_profile.py  build_claim_ledger_profile.py  build_condensed_character_profile.py  build_emotional_profile.py  cleanup-conv.ipynb  cleanup-pages.ipynb  compare_tokenizers.py  compress_character_profile.py  count_tokens_tiktoken.py  download-wikipedia.sh  dspy-dataset.ipynb  dspy-extract-extras.ipynb  dspy-extract-filtered.ipynb  dspy-extract-full.ipynb  dspy-extract-full.py  dspy-extract-optimize.ipynb  dspy-extract-optimize.py  dspy-extract.ipynb  dspy-synthetic-v2.ipynb  dspy-synthetic.ipynb  dspy_lm_test.py  explore.ipynb  extract-text-opencv.py  extract-text.ipynb  extract-text.py  extract-wiki.ipynb  extract.py  extract_emotional.py  (+35 more)
data/memory_banks/: mixed_irrelevant.jsonl  paperino_recent.jsonl  xadhoom_research.jsonl
datagen/: filter_traces.py  generate_memory_corpus.py  generate_prompts.py  migrate_traces.py  run_datagen.py  user_simulator.py
docs/: character-llm-review.md  fine-tuning-design.md
docs/fine-tuning/: dataset-generation-agent.md  evals.md  infra-costs.md  model-selection.md  risks-and-open-questions.md  sft-dataset.md  training-strategy.md
evals/: generate_eval_prompts.py  generate_memory_banks.py  run_eval_inference.py  score_eval_traces.py
experimental/: adventure_rpg.py  backup.sh  build_agentic_character_profile.py  build_aieos_profile.py  build_aieos_profile_rlm.py  build_character_profile.py  build_claim_ledger_profile.py  build_condensed_character_profile.py  cleanup-pages.ipynb  compare_tokenizers.py  compress_character_profile.py  count_tokens_tiktoken.py  dspy-dataset.ipynb  dspy-extract-extras.ipynb  dspy-extract-filtered.ipynb  dspy-extract-full.ipynb  dspy-extract-full.py  dspy-extract-optimize.ipynb  dspy-extract-optimize.py  dspy-extract.ipynb  dspy-synthetic-v2.ipynb  dspy-synthetic.ipynb  explore.ipynb  extract-text.ipynb  extract-wiki.ipynb  filter-pages.ipynb  generate_from_character_profile.py  generate_with_wiki.py  migrate_checkpoints_to_diffs.py  move-outputs.ipynb  ocr.py  pandoc-strip-fmt.lua  prepare-dataset.ipynb  profile-ledger-analysis.ipynb  prompt-characters.md  prompt.md  regenerate_checkpoint.py  restructure_profile.py  review-extract-eval.sh  review.sh  (+3 more)
experimental/tests/: test_build_aieos_profile_rlm.py  test_build_character_profile.py  test_line_based_document.py
experimental/train/: finetune.ipynb  inference.ipynb
extract/: build_emotional_profile.py  extract_emotional.py  migrate_scene_reflections.py  reflect_scenes.py
pkna/: datagen_types.py  eval_tools.py  eval_types.py  llm_backends.py  logging.py  memory_bank.py  memory_compaction.py  sft_dataset.py  system_prompts.py  testing.py  wiki_tools.py
pkna/datagen/: memory.py  types.py
pkna/eval/: types.py
pkna/extract/: scenes.py
pkna/inference/: memory.py  memory_compaction.py  system_prompts.py  tools.py
pkna/llm/: backends.py  testing.py
pkna/training/: sft_dataset.py
results/: final_ledger.json  refined_ledger.json  uno_soul_document.md
results/wiki/fandom/: citazioni-pk.md  citazioni-uno.md  pkna.md  uno.md
results/wiki/fandom/luoghi/: corona.md  dhasam-bul.md  dimensione-parallela-di-urk.md  ducklair-tower.md  duckmall-center.md  dundain.md  pozzo.md  repubblica-di-belgravia.md  soma-syntex.md  time.md  universo-pentadimensionale-di-everett-ducklair.md  xerba.md
results/wiki/fandom/personaggi/: belinda.md
results/wiki/fandom/personaggi/amici/: abraham-lincoln-wisecube.md  adam-mood.md  angela-bats.md  arxon.md  azinuth.md  baldo-l-allegro-castoro.md  bernie.md  billy-paganino.md  brad-van-beck.md  buck.md  burton-la-valle.md  canale-00.md  clint-westcock.md  cronocomandante.md  custode-della-camera-omega.md  dan-woodstein.md  destroyer-duck.md  ducklas-styvesant.md  dunia-voyda.md  ekdon.md  eugene-photomas.md  everett-ducklair.md  guardiani-della-galassia.md  helen-kraver.md  hired-squarie.md  jana.md  jerry-paperice.md  joshua-spader.md  kaplan.md  kenzaburo-tenai.md  kilborg.md  krobs-balos.md  lyla-lay.md  (+49 more)
results/wiki/fandom/tecnologia/: altronave.md  astronave-pk.md  cronovela.md  pi-kar.md  piv.md  scudo-extransformer.md  tuta-in-fibre-nanoelettriche.md  tuta-tattica.md
results/wiki/wikipedia/: characters.md  everett-ducklair.md  evroniani-1.md  evroniani-2.md  evroniani-3.md  evroniani.md  lyla.md  paperinik-2.md  paperinik.md  paperino.md  uno.md
scripts/: run_datagen_pipeline.sh
tests/: __init__.py  test_bm25_search.py  test_build_aieos_profile.py  test_checkpoint_diff.py  test_claim_ledger.py  test_datagen_types.py  test_document_structure.py  test_emotional_profile.py  test_eval_tools.py  test_eval_types.py  test_extract_emotional.py  test_filter_traces.py  test_generate_memory_corpus.py  test_generate_prompts.py  test_llm_backends.py  test_memory_bank.py  test_memory_compaction.py  test_memory_corpus.py  test_reflect_scenes.py  test_run_datagen.py  test_run_eval_inference.py  test_score_eval_traces.py  test_sft_dataset.py  test_system_prompts.py  test_user_simulator.py  test_wiki_tools.py
train/: finetune.ipynb  inference.ipynb
training/: __init__.py  assemble_sft.py  run_sft.py  smoke_test.py
(+95 files in other folders)
