[project]
name = "pk-exporter"
version = "0.1.0"
description = "Export PKNA dataset"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "accelerate>=1.13.0",
    "anthropic[bedrock]>=0.86.0",
    "click>=8.3.2",
    "datasets>=4.3.0",
    "docling-core>=2.73.0",
    "dspy>=3.1.3",
    "causal-conv1d>=1.6.1",
    "flash-attn>=2.8.3",
    "flash-linear-attention>=0.4.2",
    "gguf>=0.18.0",
    "llama-cpp-python>=0.3.16",
    "ninja>=1.13.0",
    "google-genai>=1.73.1",
    "jupyter>=1.1.1",
    "layoutparser[layoutmodels]>=0.3.4",
    "markdown-it-py>=4.0.0",
    "mlflow>=3.11.1",
    "opencv-python>=4.13.0.92",
    "pandas>=2.3.3",
    "pillow>=12.2.0",
    "pydantic>=2.13.1",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.56.0",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "transformers>=5.2.0,<=5.5.0",
    "trl>=0.24.0",
    "unsloth>=2026.4.5",
]

[project.optional-dependencies]
experimental = ["vllm>=0.17"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.14.13",
    "ty>=0.0.31",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pkna"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
    "E741",  # Ambiguous variable names (common in notebook comprehensions)
    "F811",  # Redefined names across cells (inherent to notebook workflow)
    "F841",  # Unused variables (common in exploratory cells)
]

[tool.uv.sources]
# Pre-built CUDA wheels (avoids from-source build which requires nvcc)
causal-conv1d = { url = "https://github.com/Dao-AILab/causal-conv1d/releases/download/v1.6.1.post4/causal_conv1d-1.6.1%2Bcu12torch2.10cxx11abiTRUE-cp313-cp313-linux_x86_64.whl" }
flash-attn = { url = "https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.9.0/flash_attn-2.8.3%2Bcu128torch2.10-cp313-cp313-linux_x86_64.whl" }
# Qwen3.5 rope.dimension_sections fix landed post-0.3.20; pin to latest main
# until a new release. See https://github.com/abetlen/llama-cpp-python/issues/2137
llama-cpp-python = { git = "https://github.com/abetlen/llama-cpp-python.git", branch = "main" }

[tool.uv]
link-mode = "symlink"
# Build llama-cpp-python with CUDA support for GPU-accelerated inference.
extra-build-variables = { llama-cpp-python = { CMAKE_ARGS = "-DGGML_CUDA=on" } }
# Required to solve incompatibility between vllm and transformers. vllm is only
# used in experimental, so this should not cause issues for the main codebase.
override-dependencies = [
    "transformers>=5.2.0,<=5.5.0",
    "torchao==0.16.0",
]
